--- a/RaylibMoonPatrol.vcxproj
+++ b/RaylibMoonPatrol.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="src\game\collisionManager.cpp" />
     <ClCompile Include="src\game\game.cpp" />
     <ClCompile Include="src\game\inputManager.cpp" />
+    <ClCompile Include="src\game\obstacle.cpp" />
     <ClCompile Include="src\game\vehicle.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\programManager.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="src\game\collisionManager.h" />
     <ClInclude Include="src\game\game.h" />
     <ClInclude Include="src\game\inputManager.h" />
+    <ClInclude Include="src\game\obstacle.h" />
     <ClInclude Include="src\game\vehicle.h" />
     <ClInclude Include="src\programManager.h" />
   </ItemGroup>
