--- a/RaylibMoonPatrol.vcxproj.filters
+++ b/RaylibMoonPatrol.vcxproj.filters
@@ -11,6 +11,12 @@
     <Filter Include="Source Files\Game\Objects">
       <UniqueIdentifier>{c8635798-a9a1-4cf6-a8f4-594496c21805}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Menu">
+      <UniqueIdentifier>{2635bcc2-5db4-47e7-b43b-e2ee7d7acbb8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Menu\Objects">
+      <UniqueIdentifier>{14243c35-7ea2-499f-9a4e-eeea145d91c7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -34,6 +40,15 @@
     <ClCompile Include="src\game\obstacle.cpp">
       <Filter>Source Files\Game\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="src\utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\menu\mainMenu.cpp">
+      <Filter>Source Files\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="src\menu\button.cpp">
+      <Filter>Source Files\Menu\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\programManager.h">
@@ -53,6 +68,18 @@
     </ClInclude>
     <ClInclude Include="src\game\vehicle.h">
       <Filter>Source Files\Game\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\menu\mainMenu.h">
+      <Filter>Source Files\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="src\menu\credits.h">
+      <Filter>Source Files\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\menu\button.h">
+      <Filter>Source Files\Menu\Objects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
