--- a/RaylibMoonPatrol.vcxproj.filters
+++ b/RaylibMoonPatrol.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClCompile Include="src\game\weapon.cpp">
       <Filter>Source Files\Game\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="src\game\enemy.cpp">
+      <Filter>Source Files\Game\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\programManager.h">
@@ -106,6 +109,9 @@
       <Filter>Source Files\Game</Filter>
     </ClInclude>
     <ClInclude Include="src\game\weapon.h">
+      <Filter>Source Files\Game\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\enemy.h">
       <Filter>Source Files\Game\Objects</Filter>
     </ClInclude>
   </ItemGroup>
